@@ -1396,8 +1396,9 @@ $wgMessageStructure = array(
 		'ipb_expiry_invalid',
 		'ipb_already_blocked',
 		'ip_range_invalid',
-		'proxyblocker',
 		'ipb_cant_unblock',
+		'proxyblocker',
+		'proxyblocker-disabled',
 		'proxyblockreason',
 		'proxyblocksuccess',
 		'sorbs',
